Fixed contextwindow spacing

--- a/modules/wem-admin-ui/src/main/resources/web/admin/common/styles/apps/content/context-window.less
+++ b/modules/wem-admin-ui/src/main/resources/web/admin/common/styles/apps/content/context-window.less
@@ -139,6 +139,7 @@
   .inspection-panel {
     font-size: 12px;
     overflow-y: scroll;
+    padding: 10px;
     width: 100% !important;
 
     .form {
@@ -147,6 +148,7 @@
 
     .form-view {
       .form-element-spacing(@form-field-spacing);
+      margin:-10px;
     }
 
     //    .icon {
